# electronic_store2

./: pyproject.toml
tests/: test_class_Phone.py  test_errors.py  test_func.py  test_mixlang_and_keyboard.py
utils/: items2.csv  keyboard.py  main.py  test2.py
